--- a/MaNGOS/WotLK/README
+++ b/MaNGOS/WotLK/README
@@ -31,10 +31,10 @@
 
 ------------------------------------------------------------
                      NOTE
-Some methods / hooks might not be available just yet for TrinityCore 4.3.4 (Cataclysm).
+Eluna Lua Engine for MaNGOS is under development. There will be limited functionality until each feature of Eluna is added in. Most methods might not exist once completed, we won't know until we get further into development. Please keep your eyes open for issues that you may come across and report it.
 
                      ABOUT/HOW TO SETUP
-You have folders that pertains to changes within TrinityCore's source. Each folder will contain a specific change to make Eluna work with the emulator. Each file is up to date with the latest changes. Worrying about errors shouldn't happen if you have a fresh TrinityCore source. If you have a fresh source without any specific (custom) changes, you can just move and replace the folders/files with TrinityCore's existing.
+You have folders that pertains to changes within MaNGOS source. Each folder will contain a specific change to make Eluna work with the emulator. Each file is up to date with the latest changes. Worrying about errors shouldn't happen if you have a fresh MaNGOS source. If you have a fresh source without any specific (custom) changes, you can just move and replace the folders/files with MaNGOS existing.
 
 With custom content, it is recommended not to move and replace files. It might cause issues if you do. However, it is recommended to open each individual files and setup Eluna that way if you do have custom content. To do this, search for "#ifdef ELUNA" or "ELUNA" inside of the source/header files to copy the Eluna code, and put it in your custom source.
 
@@ -43,29 +43,20 @@ Once you're setup, please feel free to get familiar with Eluna's functions and m
 If you're having trouble, post in Eluna's support here: http://emudevs.com/forumdisplay.php/84-Support
 
                      FILES THAT WERE CHANGED
-SOURCE_DIRECTORY/cmake/options.cmake
-SOURCE_DIRECTORY/cmake/showoptions.cmake
+SOURCE_DIRECTORY/CMakeLists.txt
 -
 SOURCE_DIRECTORY/dep/CMakeLists.txt
 -
 SOURCE_DIRECTORY/src/CMakeLists.txt
-SOURCE_DIRECTORY/src/server/game/CMakeLists.txt
-SOURCE_DIRECTORY/src/server/game/Accounts/RBAC.h
-SOURCE_DIRECTORY/src/server/game/Handlers/CharacterHandler.cpp
-SOURCE_DIRECTORY/src/server/game/Handlers/ChatHandler.cpp
-SOURCE_DIRECTORY/src/server/game/Handlers/LootHandler.cpp
-SOURCE_DIRECTORY/src/server/game/Handlers/MiscHandler.cpp
-SOURCE_DIRECTORY/src/server/game/Handlers/NPCHandler.cpp
-SOURCE_DIRECTORY/src/server/game/Scripting/ScriptMgr.cpp
+SOURCE_DIRECTORY/src/game/CMakeLists.txt
+SOURCE_DIRECTORY/src/game/ScriptMgr.cpp
 -
 SOURCE_DIRECTORY/src/server/scripts/CMakeLists.txt
 SOURCE_DIRECTORY/src/server/scripts/Commands/cs_reload.cpp
 -
-SOURCE_DIRECTORY/src/server/shared/DataStores/DBCStore.h
+SOURCE_DIRECTORY/src/shared/Database/DBCStore.h
 
                      ADDITIONS
 SOURCE_DIRECTORY/dep/lualib
 -
 SOURCE_DIRECTORY/src/LuaEngine
--
-SOURCE_DIRECTORY/sql/auth/10-22-2013_RBAC_RELOAD_ELUNA.sql
