--- a/TrinityCore/WotLK/README
+++ b/TrinityCore/WotLK/README
@@ -16,7 +16,7 @@
         TrinityCore : [WotLK] - [Cataclysm]
 		
             In Development:
-        MaNGOS : [WotLK]
+        MaNGOS Two : [WotLK]
 		
             About:
         Eluna is a Lua Engine for World of Warcraft-
@@ -33,7 +33,7 @@
                      ABOUT/HOW TO SETUP
 You have folders that pertains to changes within TrinityCore's source. Each folder will contain a specific change to make Eluna work with the emulator. Each file is up to date with the latest changes. Worrying about errors shouldn't happen if you have a fresh TrinityCore source. If you have a fresh source without any specific (custom) changes, you can just move and replace the folders/files with TrinityCore's existing.
 
-With custom content, it is recommended not to move and replace files. It might cause issues if you do. However, it is recommended to open each individual files and setup Eluna that way if you do have custom content. To do this, search for "#ifndef ELUNA" or "ELUNA" inside of the source/header files to copy the Eluna code, and put it in your custom source.
+With custom content, it is recommended not to move and replace files. It might cause issues if you do. However, it is recommended to open each individual files and setup Eluna that way if you do have custom content. To do this, search for "#ifdef ELUNA" or "ELUNA" inside of the source/header files to copy the Eluna code, and put it in your custom source.
 
 Once you're setup, please feel free to get familiar with Eluna's functions and methods on our wiki page: http://wiki.emudevs.com/doku.php?id=eluna
 
