--- a/MaNGOS/WotLK/README
+++ b/MaNGOS/WotLK/README
@@ -50,6 +50,7 @@ SOURCE_DIRECTORY/dep/CMakeLists.txt
 SOURCE_DIRECTORY/src/CMakeLists.txt
 SOURCE_DIRECTORY/src/game/CMakeLists.txt
 SOURCE_DIRECTORY/src/game/ScriptMgr.cpp
+SOURCE_DIRECTORY/src/game/World.cpp
 -
 SOURCE_DIRECTORY/src/server/scripts/CMakeLists.txt
 SOURCE_DIRECTORY/src/server/scripts/Commands/cs_reload.cpp
