UPDATED: READMEs with a setup video.

--- a/MaNGOS/WotLK/README
+++ b/MaNGOS/WotLK/README
@@ -4,6 +4,7 @@
         Home: http://emudevs.com/forum.php
         Wiki: http://wiki.emudevs.com/doku.php?id=eluna
         Scripts: https://github.com/ElunaLuaEngine/Scripts
+        Setup Video: http://www.youtube.com/watch?v=8wGHf7FbhSw
 
             Team:
         Tommy (Easelm)
